--- a/style.css
+++ b/style.css
@@ -160,8 +160,22 @@ main {
 
 /*POSTS*/
 .posts{
-    display: flex;
-    flex-direction: row;
+    display: grid;
+    grid-template-areas: "post"
+                        "button";
+    grid-template-columns: repeat(3,1fr);
+    text-align: center;
+    margin-bottom: 5em;
+    width:100%;
+}
+
+.post{
+    grid-area: post;
+}
+
+.posts button{
+    grid-area: button;
+    margin-top: 10vh;
 }
 
 .posts article{
