--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -162,13 +162,14 @@ main {
 
 /*MAIN_POSTS*/
 .main__posts{
-    @include flexbox(row);
+    @include flexbox(row, center, center);
     padding: 3em;
     max-width: 100%;
 
     article{
         padding: 5em;
         max-width: 30em;
+        text-align: center;
     }
 
     i{
@@ -209,7 +210,7 @@ textarea{
 
     input{
         min-width: 45em;
-        width: 100vh;
+        width: 96.5vh;
     }
 
     li:last-child{
